         CHECK() ordering (UB880D; thanks, Guesser).
20151108 hacking/{code_beautifiers.txt,uncrustify.cfg}: document Uncrustify and
         Indent code beautifiers (patch #340) (Sergio).
20151108 man/fuse.1: fix pal-tv2x and Pentagon ROMs command line options
         (Sergio).
20151109 configure.ac,data/{Makefile.am,shell-completion/bash/fuse}: support 
         bash completion (patch #335) (Sergio).
20151115 hacking/Makefile.am: add missing files (Sergio).
20151115 data/{Makefile.am,shell-completion/diff_options.sh}: add a script to
         keep options in sync (Sergio).
20151115 hacking/ChangeLog,man/fuse.1: add missing --drive-didaktik80[a|b]-type
         options (Sergio).
20151122 peripherals/if1.c,settings.[dat|pl]: more from rename 'Interface I' to
         'Interface 1' (thanks, Stuart) (Sergio).
20151130 ui/win32/options-resource.pl: remove redundant argument on button
         creation (Sergio).
20151130 ui/win32/win32ui.c: fix compilation with mingwrt 4.0+ (Kirben).
20151208 sound/blipbuffer.h: remove second inline declaration of
         blip_buffer_samples_avail() (Sergio).
20151208 ui/gtk/pokemem.c: do not use deprecated gtk_tree_view_set_rules_hint()
         on GTK+ 3 UI (Sergio).
20151208 ui/gtk/gtkmouse.c: replace deprecated gdk_cursor_new() on GTK+ 3 UI
         (Sergio).
20151223 m4/ax_pthread.m4: update macro that checks POSIX threads (Sergio).
20151223 Makefile.am,configure.ac: don't use CFLAGS user variable for warnings
         or pthread options (Sergio).
20151228 configure.ac: remove duplicate sdl-config calls and avoid the use of
         CPPFLAGS (Sergio).
20151228 configure.ac: use PKG_CHECK_MODULES for GLib detection rather than raw
         pkg-config, that doesn't play well when cross-compiling (Sergio).
20151228 ui/gtk/gtkui.c: update properties used in GtkAboutDialog (Sergio).
20160106 man/fuse.1,peripherals/speccyboot.[ch]: update SpeccyBoot URL (Sergio).